2011-04-05  Adrienne Walker  <enne@google.com>

Reviewed by Tony Chang.

        Correctly set color when using skia's fillRoundedRect.
        https://bugs.webkit.org/show_bug.cgi?id=57907

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::fillRoundedRect):

git-svn-id: svn://svn.chromium.org/blink/trunk@83002 bbb929c8-8fbe-4397-9dbb-9b2b20218538