third_party/WebKit/Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp
@@ -854,6 +854,7 @@ void GraphicsContext::fillRoundedRect(const IntRect& rect,
 
     SkPaint paint;
     platformContext()->setupPaintForFilling(&paint);
+    paint.setColor(color.rgb());
     platformContext()->canvas()->drawPath(path, paint);
 }
 
